# AI-Powered-Forensic-Assistant-for-Insider-Threat-Detection-

./: .gitignore  .package-lock.json  App.jsx  Dockerfile  README.md  activate  activate.bat  activate.csh  activate.fish  activate.nu  app.py  docker-compose.yml  package-lock.json  pyproject.toml  pyvenv.cfg  requirements.txt  test_data.json  test_data_abnormal.json  test_data_vulnerable.json  test_data_vulnerable2.json  test_data_with_content.json  tfidf.pkl
